syntax = "proto3"; // says compiler to use Protocol Buffers v3 syntax

package user;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserReply);
  rpc GetUsers (GetUsersRequest) returns (GetUsersReply);
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message CreateUserReply {
  User user = 1;
}

message GetUsersRequest {
  string filterText = 1;
}

message GetUsersReply {
  repeated User users = 1;
}
